--- a/static/test.html
+++ b/static/test.html
@@ -22,10 +22,10 @@
 	<div>
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div class="jumbotron">
-			<h1>Michelle Duong</h1>
+		<div>
+			<h1>Michael Bernstein</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
-			<button id="testjs" class="btn btn-primary btn-lg">Test Javascript</button>
+      		<button id="testjs" class="btn btn-primary btn-lg">Test Javascript</button>
 		</div>
 
 
@@ -33,51 +33,51 @@
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
-		<div class="project" id="project1">
-			<a href="project.html" class="thumbnail">
-				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image" class="img">
+		<div id="project1">
+			<a href="project.html">
+				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
 				<p>Waiting in Line</p>
 			</a>
 		</div>
-		<div class="project" id="project2">
-			<a href="project.html" class="thumbnail">
-				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image" class="img">
+		<div id="project2">
+			<a href="project.html">
+				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
 				<p>Needfinding</p>
 			</a>
 		</div>
-		<div class="project" id="project3">
-			<a href="project.html" class="thumbnail">
-				<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image" class="img">
+		<div id="project3">
+			<a href="project.html">
+				<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image">
 				<p>Prototyping</p>
 			</a>
 		</div>
-		<div class="project" id="project4">
-			<a href="project.html" class="thumbnail">
-				<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image" class="img">
+		<div id="project4">
+			<a href="project.html">
+				<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image">
 				<p>Heuristic Evaluation</p>
 			</a>
 		</div>
-		<div class="project" id="project5">
-			<a href="project.html" class="thumbnail">
-				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image" class="img">
+		<div id="project5">
+			<a href="project.html">
+				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image">
 				<p>Visualization</p>
 			</a>
 		</div>
-		<div class="project" id="project6">
-			<a href="project.html" class="thumbnail">
-				<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image" class="img">
+		<div id="project6">
+			<a href="project.html">
+				<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image">
 				<p>Social design</p>
 			</a>
 		</div>
-		<div class="project" id="project7">
-			<a href="project.html" class="thumbnail">
-				<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image" class="img">
+		<div id="project7">
+			<a href="project.html">
+				<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image">
 				<p>Gestural interaction</p>
 			</a>
 		</div>
-		<div class="project" id="project8">
-			<a href="project.html" class="thumbnail">
-				<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image" class="img">
+		<div id="project8">
+			<a href="project.html">
+				<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image">
 				<p>Design tools</p>
 			</a>
 		</div>
